...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ln-Gn-tMs">
                                                <rect key="frame" x="89.999999999999986" y="0.0" width="65.000000000000014" height="65"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="65" id="tEf-Qk-bAh"/>
                                                    <constraint firstAttribute="height" constant="65" id="yVw-U1-IU7"/>
                                                </constraints>
                                                <state key="normal" image="divide"/>
                                                <connections>
                                                    <action selector="onDividePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LOc-nq-BNN"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ifz-yy-xCq">
                                                <rect key="frame" x="180" y="0.0" width="65" height="65"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="65" id="FfI-Gi-h2b"/>
                                                    <constraint firstAttribute="height" constant="65" id="QRL-zA-xj9"/>
                                                </constraints>
                                                <state key="normal" image="multiply"/>
                                                <connections>
                                                    <action selector="onMultiplyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="czZ-7Y-aWS"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gh9-r9-J26">
                                                <rect key="frame" x="0.0" y="0.0" width="64.999999999999986" height="65"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="65" id="UsP-aR-4r4"/>
                                                    <constraint firstAttribute="height" constant="65" id="pnH-Nz-7iV"/>
                                                </constraints>
                                                <state key="normal" image="subtract"/>
                                                <connections>
                                                    <action selector="onSubtractPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RG7-AW-i9C"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7hx-ld-fMr">
                                                <rect key="frame" x="89.999999999999986" y="0.0" width="65.000000000000014" height="65"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="65" id="5bZ-Bs-8yn"/>
                                                    <constraint firstAttribute="width" constant="65" id="nIH-DM-xVa"/>
                                                </constraints>
                                                <state key="normal" image="add"/>
                                                <connections>
                                                    <action selector="onAddPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mPd-gZ-LCA"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YEE-GA-xV4">
                                                <rect key="frame" x="180" y="0.0" width="65" height="65"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="65" id="Ce2-qS-LSD"/>
                                                    <constraint firstAttribute="width" constant="65" id="dn3-rg-nRk"/>
                                                </constraints>
                                                <state key="normal" image="equal"/>
                                                <connections>
                                                    <action selector="onEqualPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VUg-M4-D4h"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
